modified:   About.html 	modified:   blog.html 	modified:   gallery.html 	modified:   index.html 	modified:   post.html 	modified:   post2.html 	modified:   post3.html 	modified:   post4.html 	modified:   post5.html 	modified:   post6.html

--- a/gallery.html
+++ b/gallery.html
@@ -338,13 +338,15 @@
                   <li><a href="#"><i class="fa fa-envelope"></i>gopilipinasadventurista@gmail.com</a></li>
                 </ul>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
-                <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 7px;" placeholder="Your Email">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Sign Up</button>
-                        </div>
-                    </div>
+          <form><div class="w-100">
+            <div class="input-group">
+                <input class="comment__email" type="email" name="Email" placeholder="Email">
+                <div class="input-group-append">
+                    <a href="#"><button class="btn btn-primary px-4">Sign Up</button></a>
+                </div>
+            </div>
+        </div>
+      </form>
                 </div>
             </div>
           </footer>
