--- a/post.html
+++ b/post.html
@@ -155,6 +155,16 @@
             <li><a href="#"><i class="fa fa-facebook-square"></i>@officialgoPilipinas.ph</a></li>
             <li><a href="#"><i class="fa fa-envelope"></i>help@goPilipinas.ph</a></li>
           </ul>
+          <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
+          <form><div class="w-100">
+            <div class="input-group">
+                <input class="comment__email" type="email" name="Email" placeholder="Email">
+                <div class="input-group-append">
+                    <a href="#"><button class="btn btn-primary px-4">Sign Up</button></a>
+                </div>
+            </div>
+        </div>
+      </form>
         </div>
       </div>
     </footer>
