--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900|Work+Sans:300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+    
     <link rel="stylesheet" href="mystyle.css">
     
     <!-- title tag-->
@@ -27,6 +30,7 @@
           <menu><a href="blog.html"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a>
           </menu>
         </section>
+  
         <h1 id="above-the-fold__description">
           Explore and be part of our community site
           Meet our contributor who have the same interest as yours 
@@ -36,6 +40,7 @@
         </h1>
       </div>
     </section>
+    <div><h1 class="color-cape text-center" id="demo2"></h1></div>
     <section id="latest-review">
       <h2 class="section-title">
         <div class="color-city">latest </div>
@@ -149,17 +154,23 @@
             <li><a href="https://facebook.com/gopilipinasadventurista/"><i class="fa fa-facebook-square"></i>GoPilipinasAdventurista</a></li>
             <li><a href="#"><i class="fa fa-envelope"></i>gopilipinasadventurista@gmail.com</a></li>
           </ul>
-          <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
-          <form><div class="w-100">
-            <div class="input-group">
-                <input class="comment__email" type="email" name="Email" placeholder="Email">
-                <div class="input-group-append">
-                    <a href="#"><button class="btn btn-primary px-4">Sign Up</button></a>
-                </div>
-            </div>
-        </div>
-      </form>
-      </div>
+          <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter:</h6>
+          <form id="form">
+            <!-- /** 
+            * ! Email Input here
+           **/ -->
+  
+          <div>
+            <label for="email"></label>
+            <input type="email" name="email" id="email" placeholder="Email" />
+            <i class="fas fa-exclamation-circle failure-icon"></i>
+            <i class="far fa-check-circle success-icon"></i>
+            <div class="error"></div>
+          </div>
+            <button type="submit" id="signup">Subscribe</button>
+          </form>
+    </div>
+
     </footer>
           <!-- Messenger Chat Plugin Code -->
           <div id="fb-root"></div>
