modified:   About.html 	modified:   blog.html 	modified:   gallery.css 	modified:   gallery.html 	modified:   mystyle.css 	modified:   post.html 	modified:   post2.html 	modified:   post3.html 	modified:   post4.html 	modified:   post5.html 	modified:   post6.html 	modified:   script.min.js

--- a/post3.html
+++ b/post3.html
@@ -150,16 +150,21 @@
             <li><a href="#"><i class="fa fa-facebook-square"></i>@officialgoPilipinas.ph</a></li>
             <li><a href="#"><i class="fa fa-envelope"></i>help@goPilipinas.ph</a></li>
           </ul>
-          <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
-          <form><div class="w-100">
-            <div class="input-group">
-                <input class="comment__email" type="email" name="Email" placeholder="Email">
-                <div class="input-group-append">
-                    <a href="#"><button class="btn btn-primary px-4">Sign Up</button></a>
-                </div>
-            </div>
-        </div>
-      </form>
+          <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter:</h6>
+          <form id="form">
+            <!-- /** 
+            * ! Email Input here
+           **/ -->
+  
+          <div>
+            <label for="email"></label>
+            <input type="email" name="email" id="email" placeholder="Email" />
+            <i class="fas fa-exclamation-circle failure-icon"></i>
+            <i class="far fa-check-circle success-icon"></i>
+            <div class="error"></div>
+          </div>
+            <button type="submit" id="signup">Subscribe</button>
+          </form>
         </div>
       </div>
     </footer>
