modified:   About.html 	modified:   script.min.js

--- a/About.html
+++ b/About.html
@@ -223,7 +223,7 @@
             <div class="image5"></div>
             <div class="post-card__details">
               <h2><a href="#">Contribute & Collaboration </a></h2>
-              <p>Yes! We are open for Contributors and Collaborators. We're so happy to work with you. Just contact us in our Social Media Accounts posted here.</p><a class="post-card__avatar" href="post5.html">
+              <p>Yes! We are open for Contributors and Collaborators. We're so happy to work with you. Just contact us via our Social Media Accounts posted here.</p><a class="post-card__avatar" href="post5.html">
                 <div class>
               </div>
             <div class="avatar__muted-line"></div></a>
